--- a/p3-relacional/package.json
+++ b/p3-relacional/package.json
@@ -12,6 +12,7 @@
    },
    "dependencies": {
       "autocannon": "^7.15.0",
+      "cluster": "^0.7.7",
       "cors": "^2.8.5",
       "express": "^4.19.2",
       "morgan": "^1.10.0",
@@ -25,7 +26,7 @@
       "dev": "nodemon --exec ts-node src/server.ts",
       "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migration/default",
       "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run ",
-      "cannon":"npx autocannon -c 500 -d 20 -w 10 --renderStatusCodes --latency  --warmup [-c 1 -d 2] http://localhost:3000/get/user"
-      ,"cluster":"npx ts-node ./cluster.ts"
+      "cannon": "npx autocannon -c 500 -d 20 -w 10 --renderStatusCodes --latency --warmup [-c 1 -d 2] http://localhost:3000/get/alluser",
+      "cluster": "npx ts-node ./cluster.ts"
    }
 }
